# ARMv8_kernel

./: .clang-format  .clangd  .env.example  .gitignore  Cargo.toml  Makefile  README.md  i  linker.ld
_include/arm/: cpu.h  mmu.h  reg.h
_include/drivers/: gicv3.h  imx8mp_tmu.h
_include/kernel/: hardware.h  init.h  mm.h  panic.h  scheduler.h  smp.h  syscall.h  task.h  userspace_embedded_examples.h  vfs.h
_include/lib/: align.h  ansi.h  branch.h  flags.h  lock.h  math.h  mem.h  (+4 more)
_src/: rslib.rs
embedded/: demo.elf  hello_world.elf  print_a.elf  print_b.elf  sched_test.elf  shell.elf  sysc_benchmarking.elf  test.elf
make/: Compiler.mk  Files.mk  Flags.mk  Folders.mk
scripts/: config.gdb  debug_jlink_gdb.sh  jlink_gdb.sh  openocd.cfg  openocd.sh
src/: rslib.rs
user_examples/: Makefile  bin_to_array.py  linker.ld  test.elf  test.elf.txt
user_examples/allocator_test/: Cargo.toml
user_examples/allocator_test/src/: lib.rs
user_examples/allocator_test/stl_include/: stdio.h  stdlib.h  stdthread.h
userspace/: README.md
userspace/stl/: .clangd  Cargo.toml  Makefile  build.rs
userspace/stl/include/: stddef.h  stdint.h  stdio.h  syscall.h
userspace/stl/src/: crt0.S  lib.rs  lock.rs  panic.rs  stdio.c  stdio.rs  stdlib.c  stdlib.rs  stdthread.c  syscall.rs  thread.rs  vfs.rs
userspace/stl/src/alloc/: alloc.cpp  mod.rs
userspace/stl/src/malloc/: malloc.cpp  mod.rs
userspace/stl/src/stdio/: mod.rs
userspace/stl/src/syscall/: mod.rs  syscall.S  syscall.c
userspace/stl/src/thread/: mod.rs  thread.S
userspace/stl/stl_include/: malloc.h  vfs.h
(+488 files in other folders)
