[package]
name = "stl"
version = "0.1.0"
edition = "2024"

[dependencies]
num_enum = { version = "0.7.6", default-features = false }

[lib]
name = "stl"
crate-type = ["staticlib", "rlib"]
test = false
doctest = false
bench = false

[build-dependencies]
glob = "0.3.3"
cc = "1.2.62"
dotenvy = "0.15.7"

[features]
allocator_logs = []
